--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -31,7 +31,7 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.MAHESHR_PRIVATE_KEY }}     
 
-      - name:  Setting up terraform
+      - name:  Setting up the terraform
         uses: hashicorp/terraform-github-actions/init@v0.4.0
       - name: Initialization
         run: terraform init
